reviewed and improved csv processing logic using stream and new executor